Fix header overlaps in-page anchors problem

--- a/_css/basic.css
+++ b/_css/basic.css
@@ -270,3 +270,7 @@ ul {
   top: -100%;
   left: -100%;
 }
+
+html {
+  scroll-padding-top: 62px;
+}
